# diffusera

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
docs/: PERFORMANCE.md
shaders/: shaders.frag  shaders.vert
src/: Frustum.h  application.cpp  application.h  asset.cpp  asset.h  camera.cpp  camera.h  chunk.cpp  chunk.h  config.h  frustum.cpp  frustum.h  io.cpp  io.h  main.cpp  main.py  main.ts  manager.cpp  manager.h  noise.ts  player.h  shader.cpp  shader.h  texture.cpp  texture.h
src/noise/: inigo_noise.cpp  inigo_noise.h
